feat: implement group dissolution retention
